fix: disable image picker on small screens and fix some layout issues (#6)

--- a/src/admin/profile/view/components/ProfileHeader/ProfileHeader.module.scss
+++ b/src/admin/profile/view/components/ProfileHeader/ProfileHeader.module.scss
@@ -1,4 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
+
+  .imagePicker {
+    max-width: 400px;
+  }
 }
